--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!doctype html>
 <html>
   <head>
-  <title>My First Web Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial=1.0"
+  <title>SaFarI-We put the Far in SaFarI</title>
+    <style>
+      body {
+        font-family: Arial, sans serif;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        background color: #f4f4f4;
+      }
+      header {
+        background color: #2c3e50;
+        color: white;
+        padding: 20px;
+      }
+      nav {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+        padding: 10px;
+        background; #34495e;
+        
+    </style>
     </head>
-<body>
+</html>
