--- a/index.html
+++ b/index.html
@@ -3,27 +3,53 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial=1.0"
-  <title>SaFarI-We put the Far in SaFarI</title>
+  <title>SaFarI-We put the Far in SaFARi</title>
     <style>
       body {
         font-family: Arial, sans serif;
         margin: 0;
         padding: 0;
         text-align: center;
-        background color: #f4f4f4;
+        background color: #f0f8ff;
+        color: #333
       }
       header {
-        background color: #2c3e50;
+        background color: #228B22;
         color: white;
         padding: 20px;
+        text-align: center;
       }
-      nav {
-        display: flex;
-        justify-content: center;
-        gap: 15px;
-        padding: 10px;
-        background; #34495e;
-        
-    </style>
-    </head>
-</html>
+       .container {
+            padding: 20px;
+            text-align: center;
+       }
+      img {
+            width: 80%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+      .description {
+            margin-top: 20px;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+       footer {
+            background-color: #228B22;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+       }
+       </style>
+</head>
+<body>
+
+<header>
+    <h1>Explore the Safari</h1>
+</header>
+
+<div class="container">
+    <img src="https://example.com/safari-image.jpg" alt="Safari Landscape">
