--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial=1.0"
-  <title>SaFarI-We put the Far in SaFARi</title>
+  <title>SaFarI-We put the FAR in SaFARi</title>
     <style>
       body {
         font-family: Arial, sans serif;
@@ -53,3 +53,15 @@
 
 <div class="container">
     <img src="https://example.com/safari-image.jpg" alt="Safari Landscape">
+  <div class="description">
+        <h2>A Journey into the Wild</h2>
+        <p>Experience the breathtaking beauty of the African Safari. Witness majestic wildlife in their natural habitat as you embark on a journey through the savannah, encountering lions, elephants, zebras, and more.</p>
+    </div>
+</div>
+
+<footer>
+    <p>Visit our website for more details: <a href="https://www.safariadventure.com" style="color: white; text-decoration: none;">www.safariadventure.com</a></p>
+</footer>
+
+</body>
+</html>
