--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial=1.0"
-  <title>SaFarI-We put the FAR in SaFARi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Safari Adventure</title>
     <style>
-      body {
-        font-family: Arial, sans serif;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        background color: #f0f8ff;
-        color: #333
-      }
-      header {
-        background color: #228B22;
-        color: white;
-        padding: 20px;
-        text-align: center;
-      }
-       .container {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff; /* Light background color */
+            color: #333; /* Text color */
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #228B22; /* Safari green header */
+            color: white;
             padding: 20px;
             text-align: center;
-       }
-      img {
-            width: 80%;
+        }
+        .container {
+            padding: 20px;
+            text-align: center;
+        }
+        img {
+            width: 80%; /* Image width */
             height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-      .description {
+        .description {
             margin-top: 20px;
             font-size: 18px;
             line-height: 1.6;
         }
-       footer {
+        footer {
             background-color: #228B22;
             color: white;
             text-align: center;
@@ -42,8 +41,8 @@
             position: fixed;
             width: 100%;
             bottom: 0;
-       }
-       </style>
+        }
+    </style>
 </head>
 <body>
 
@@ -52,10 +51,11 @@
 </header>
 
 <div class="container">
-    <img src="https://example.com/safari-image.jpg" alt="Safari Landscape">
-  <div class="description">
+    <img src="https://media.istockphoto.com/id/697689066/photo/three-giraffe-in-national-park-of-kenya.jpg?s=1024x1024&w=is&k=20&c=7OS-0WJKAaAib3Oo4kWfMN1TPhERmH9VHrADV3a0S_I=" alt="Safari Giraffes in Kenya">
+    
+    <div class="description">
         <h2>A Journey into the Wild</h2>
-        <p>Experience the breathtaking beauty of the African Safari. Witness majestic wildlife in their natural habitat as you embark on a journey through the savannah, encountering lions, elephants, zebras, and more.</p>
+        <p>Experience the breathtaking beauty of the African Safari. Witness majestic wildlife in their natural habitat as you embark on a journey through the savannah, encountering giraffes, lions, elephants, zebras, and more.</p>
     </div>
 </div>
 
@@ -65,3 +65,4 @@
 
 </body>
 </html>
+
