--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <img src="https://media.istockphoto.com/id/697689066/photo/three-giraffe-in-national-park-of-kenya.jpg?s=1024x1024&w=is&k=20&c=7OS-0WJKAaAib3Oo4kWfMN1TPhERmH9VHrADV3a0S_I=" alt="Safari Giraffes in Kenya">
     
     <div class="description">
-        <h2>A Journey into the Wild</h2>
-        <p>Experience the breathtaking beauty of the African Safari. Witness majestic wildlife in their natural habitat as you embark on a journey through the savannah, encountering giraffes, lions, elephants, zebras, and more.</p>
+        <h2>Discover SaFARi - Adventure Awaits</h2>
+        <p>At SaFARi, we believe in offering more than just a trip. We provide unforgettable safari experiences that bring you face-to-face with the stunning wildlife and landscapes of Africa. Whether you're tracking the majestic Big Five or immersing yourself in the beauty of the African savannah, our expertly guided tours ensure you get the most out of your adventure.</p>
+        <p>We take pride in our commitment to sustainability, responsible travel, and providing safe, immersive experiences for all our guests. From our knowledgeable local guides to our customized itineraries, SaFARi is dedicated to making your dream safari a reality.</p>
+        <p><strong>Slogan:</strong> <em>"We put the FAR in SaFARi"</em></p>
     </div>
 </div>
 
