--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safari Adventure</title>
+    <title>SaFARi Adventure</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff; /* Light background color */
-            color: #333; /* Text color */
+            background-color: #f0f8ff;
+            color: #333; 
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #228B22; /* Safari green header */
+            background-color: #228B22; 
             color: white;
             padding: 20px;
             text-align: center;
@@ -23,7 +23,7 @@
             text-align: center;
         }
         img {
-            width: 80%; /* Image width */
+            width: 80%; 
             height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -41,6 +41,12 @@
             position: fixed;
             width: 100%;
             bottom: 0;
+        }
+        .slogan {
+            font-style: italic; 
+            font-size: 24px;
+            color: #ff6347; 
+            margin-top: 10px;
         }
     </style>
 </head>
