--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
 <header>
     <h1>Explore the Safari</h1>
+    <nav>
+<a href="index.html">Home</a> |
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a>
+</nav>
 </header>
 
 <div class="container">
