--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 <main>
     <div class="container">
         <!-- Your image here -->
-        <img src="your-photo.jpg" alt="Your Photo"> <!-- Replace with your actual image path -->
+        <img src="Me.png" alt="Your Photo"> <!-- Replace with your actual image path -->
 
         <div class="description">
             <h2>Hi! I'm a Beginner Web Developer</h2>
