--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,87 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+    <style>
+        /* Same style as the Home page */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: #333; 
+            margin: 0;
+            padding: 0;
+        }
 
-<meta charset="UTF-8">
+        header {
+            background-color: #228B22; 
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
 
-<title>Contact Me</title>
+        .container {
+            padding: 20px;
+            text-align: center;
+        }
 
+        footer {
+            background-color: #228B22;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .description {
+            margin-top: 20px;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        .contact-info {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+    </style>
 </head>
-
 <body>
 
 <header>
-
-<h1>Contact Me</h1>
-
-<nav>
-
-<a href="index.html">Home</a> |
-
-<a href="about.html">About</a> |
-
-<a href="contact.html">Contact</a>
-
-</nav>
-
+    <h1>Contact Me</h1>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
 </header>
 
-
-<main>
-
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
-
-</main>
-
+<div class="container">
+    <main>
+        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:cse24-022@thuto.bac.ac.bw">cse24-022@thuto.bac.ac.bw</a>.</p>
+        
+        <div class="contact-info">
+            <h2>Contact Details:</h2>
+            <p>Phone: +26774125532</p>
+            <p>Location: Botswana</p>
+        </div>
+    </main>
+</div>
 
 <footer>
-
-<p>&copy; 2025 Your Name</p>
-
+    <p>&copy; 2025 Lerang Tumelo Gaofano</p>
 </footer>
 
 </body>
 </html>
+
