--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
     </div>
 </div>
 
+<!-- Accommodation Section -->
+<div id="accommodation" class="container my-5">
+    <h2>Accommodation</h2>
+    <p>Choose from a variety of accommodation options.</p>
+    <ul>
+        <li>Luxury Lodges</li>
+        <li>Tented Camps</li>
+        <li>Eco-Friendly Resorts</li>
+    </ul>
+</div>
+
+<!-- Activities Section -->
+<div id="activities" class="container my-5">
+    <h2>Activities</h2>
+    <p>Exciting activities to explore.</p>
+    <ul>
+        <li>Game Drives</li>
+        <li>Hot Air Balloon Rides</li>
+        <li>Cultural Village Tours</li>
+    </ul>
+</div>
+
+<!-- Food Section -->
+<div id="food" class="container my-5">
+    <h2>Food</h2>
+    <p>Experience traditional African cuisine.</p>
+    <ul>
+        <li>Seswaa and Pap</li>
+        <li>Rice and Chicken</li>
+        <li>Sorghum and Beef</li>
+    </ul>
+</div>
+
 <footer class="bg-success text-white text-center py-3">
     <p>Visit our website: <a href="https://www.safariadventure.com" class="text-white">www.safariadventure.com</a></p>
 </footer>
@@ -78,5 +111,4 @@
 
 </body>
 </html>
-
 
