--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>A traditional dish of slow-cooked beef served with maize meal.</p>
         </div>
         <div class="col-md-4">
-            <img src="https://www.simplyrecipes.com/thmb/KU-Q1xCeSjcMHLfGVvYUiQoBknA=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Chicken-Rice-Casserole-LEAD-2-01230ff397ac4b35958e8ffe9857fca6.jpg" class="img-fluid rounded food-img">
+            <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/video-api/assets/13385.jpg" class="img-fluid rounded food-img">
             <h5>Rice and Chicken</h5>
             <p>A delicious staple meal often served with vegetables.</p>
         </div>
