--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,8 @@
         <a href="index.html">Home</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a>
+        <a href="feedback.html">Feedback</a>
+        
     </nav>
 </header>
 
