--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             text-align: center;
         }
         img {
-            width: 200px; /* You can adjust the size */
+            width: 200px; 
             height: 200px;
             border-radius: 50%;
             margin-top: 20px;
@@ -60,13 +60,14 @@
         <a href="index.html">Home</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a>
+        <a href="feedback.html">Feedback</a>
     </nav>
 </header>
 
 <main>
     <div class="container">
-        <!-- Your image here -->
-        <img src="Me.png" alt="Your Photo"> <!-- Replace with your actual image path -->
+       
+        <img src="Me.png" alt="Your Photo"> 
 
         <div class="description">
             <h2>Hi! I'm a Beginner Web Developer</h2>
