--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      background-color: #e4f0dc; /* nature-inspired background */
+      background-color: #e4f0dc; 
       font-family: 'Roboto', sans-serif;
     }
     header {
