--- a/about.html
+++ b/about.html
@@ -2,87 +2,104 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #228B22;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-        .container {
-            padding: 20px;
-            text-align: center;
-        }
-        img {
-            width: 200px; 
-            height: 200px;
-            border-radius: 50%;
-            margin-top: 20px;
-        }
-        .description {
-            margin-top: 20px;
-            font-size: 18px;
-            line-height: 1.6;
-        }
-        footer {
-            background-color: #228B22;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Me - SaFARi Adventure</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #e4f0dc;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    header {
+      background: linear-gradient(to right, #2a9d8f, #264653);
+      backdrop-filter: blur(10px);
+      z-index: 10;
+      position: relative;
+    }
+
+    .navbar {
+      z-index: 1000;
+      position: relative;
+    }
+
+    h1, h2, h3 {
+      color: #264653;
+    }
+
+    .description {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: #333;
+      padding: 20px;
+    }
+
+    .profile-img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      margin: 20px auto;
+    }
+
+    footer {
+      background-color: #264653;
+      color: white;
+      text-align: center;
+      padding: 15px 10px;
+      margin-top: 50px;
+    }
+
+    footer a {
+      color: #ffffff;
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body>
 
-<header>
-    <h1>About Me</h1>
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
-        <a href="feedback.html">Feedback</a>
-    </nav>
-</header>
-
-<main>
-    <div class="container">
-       
-        <img src="Me.png" alt="Your Photo"> 
-
-        <div class="description">
-            <h2>Hi! I'm a Beginner Web Developer</h2>
-            <p>This is my first multi-page website, and I'm excited to share it with you!</p>
-
-            <h3>How the Idea of This Website Came About</h3>
-            <p>The idea for this website came from my passion for learning web development. I wanted to create something simple and personal to showcase my journey and learn how to make functional web pages. As a beginner, I wanted to try working with multiple pages, including a home page, an about page, and a contact page. This project was a great way to start experimenting with basic web design and GitHub Pages.</p>
+  
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">SaFARi Adventure</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          </ul>
         </div>
+      </div>
+    </nav>
+  </header>
+
+  
+  <main class="container text-center my-5">
+    <img src="Me.png" alt="Profile photo of the developer" class="profile-img" width="200" height="200" />
+    <div class="description">
+      <h2>Hi! I'm a Beginner Web Developer</h2>
+      <p>This is my first multi-page website, and I'm excited to share it with you!</p>
+
+      <h3>How the Idea of This Website Came About</h3>
+      <p>The idea for this website came from my passion for learning web development. I wanted to create something simple and personal to showcase my journey and learn how to make functional web pages. As a beginner, I wanted to try working with multiple pages, including a home page, an about page, and a contact page. This project was a great way to start experimenting with basic web design and GitHub Pages.</p>
     </div>
-</main>
+  </main>
 
-<footer>
-    <p>Visit my website for more details: <a href="https://www.safariadventure.com" style="color: white; text-decoration: none;">www.safariadventure.com</a></p>
-</footer>
+ 
+  <footer>
+    <p>Visit my website for more details: <a href="https://www.safariadventure.com" target="_blank">www.safariadventure.com</a></p>
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
+
