--- a/feedback.html
+++ b/feedback.html
@@ -1,49 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Feedback - SaFARi Adventure</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      background-color: #e4f0dc;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    header {
+      background: linear-gradient(to right, #2a9d8f, #264653);
+      backdrop-filter: blur(10px);
+      z-index: 10;
+      position: relative;
+    }
+
+    .navbar {
+      z-index: 1000;
+      position: relative;
+    }
+
+    .container {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    h2 {
+      color: #264653;
+      font-family: 'Merriweather', serif;
+    }
+
+    .form-label {
+      font-weight: 600;
+    }
+
+    .btn-success {
+      background-color: #2a9d8f;
+      border-color: #2a9d8f;
+    }
+
+    .btn-success:hover {
+      background-color: #264653;
+      border-color: #264653;
+    }
+
+    footer {
+      background-color: #264653;
+      color: white;
+      text-align: center;
+      padding: 15px 10px;
+      margin-top: 40px;
+    }
+
+    .nav-link.active {
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-<div class="container">
-<a class="navbar-brand" href="index.html">SaFARi Adventure</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav ms-auto">
-<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-</ul>
-</div>
-</div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">SaFARi Adventure</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="feedback.html">Feedback</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 
-<main class="container my-5">
-<h2 class="text-center mb-4">We Value Your Feedback</h2>
-<form>
-<div class="mb-3">
-<label for="name" class="form-label">Full Name</label>
-<input type="text" class="form-control" id="name" name="name" placeholder="John Doe" required>
-</div>
-<div class="mb-3">
-<label for="email" class="form-label">Email address</label>
-<input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
-</div>
-<div class="mb-3">
-<label for="message" class="form-label">Your Message</label>
-<textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-</div>
-<button type="submit" class="btn btn-success">Send Feedback</button>
-</form>
+<main class="container">
+  <h2 class="text-center mb-4">We Value Your Feedback</h2>
+  <form>
+    <div class="mb-3">
+      <label for="name" class="form-label">Full Name</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="John Doe" required>
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
+    </div>
+    <div class="mb-3">
+      <label for="message" class="form-label">Your Message</label>
+      <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-success">Send Feedback</button>
+  </form>
 </main>
+
+<footer>
+  <p>&copy; 2025 Lerang Tumelo Gaofano</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
