--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
               <li><a class="dropdown-item" href="about.html">About</a></li>
               <li><a class="dropdown-item" href="contact.html">Contact</a></li>
               <li><a class="dropdown-item" href="feedback.html">Feedback</a></li>
+              <li><a class="dropdown-item" href="booking.html">Bookings</a></li>
             </ul>
           </li>
         </ul>
