--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,7 @@
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="booking.html">Bookings</a></li>
         </ul>
       </div>
     </div>
