--- a/feedback.html
+++ b/feedback.html
@@ -77,6 +77,7 @@
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link active" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="booking.html">Bookings</a></li>
         </ul>
       </div>
     </div>
