--- a/booking.html
+++ b/booking.html
@@ -81,7 +81,7 @@
 
 <main class="container my-5">
   <h2 class="text-center mb-4">Book Your Safari Adventure</h2>
-  <form>
+  <form onsubmit="handleSubmit(event)">
     <div class="mb-3">
       <label for="fullname" class="form-label">Full Name</label>
       <input type="text" class="form-control" id="fullname" name="fullname" placeholder="John Doe" required>
@@ -127,5 +127,13 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  function handleSubmit(event) {
+    event.preventDefault();
+    alert("Thank you for your booking! We’ll contact you soon.");
+    document.querySelector("form").reset(); // clear form after submission
+  }
+</script>
 </body>
 </html>
+
